--- a/InformationSecurityExp_DES.vcxproj
+++ b/InformationSecurityExp_DES.vcxproj
@@ -128,9 +128,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="InformationSecurityExp_DES.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="FileOpenTest.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="FileOpenTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DealPlaintext.h" />
